Fix not to allocate unnecessary descriptor

fixes PR/57358